test/trivial/deitz/type-param-mod-config/config_use_before_decl.good
config_use_before_decl.chpl:1: error: statement references variable 'x' before it is defined
